k8s-deployment/ingress/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  
  rules:
  - host: ""
    http:
      paths:
        - path: /nginx(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  nginx-project
              port:
                number: 80
        - path: /quiz-query(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: quiz-query-service
              port:
                number: 3503
        - path: /quiz-command(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: quiz-command-service
              port:
                number: 3000
        - path: /scoring(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: scoring-service
              port:
                number: 3504
        - path: /auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: auth-service
              port:
                number: 3000

        - path: /rabbitmq(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  rabbitmq
              port:
                number: 15672

  - host: lintangbs.my.id
    http:
      paths:
        - path: /nginx(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  nginx-project
              port:
                number: 80
        - path: /quiz-query(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: quiz-query-service
              port:
                number: 3503
        - path: /quiz-command(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: quiz-command-service
              port:
                number: 3000
        - path: /scoring(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: scoring-service
              port:
                number: 3504
        - path: /auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: auth-service
              port:
                number: 3000

        - path: /rabbitmq(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  rabbitmq
              port:
                number: 15672
